@@ -12,17 +12,17 @@ import com.food.ordering.system.order.service.domain.event.OrderPaidEvent;
 import org.springframework.stereotype.Component;
 
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 public class OrderMessagingDataMapper {
+
     public PaymentRequestAvroModel orderCreatedEventToPaymentRequestAvroModel(OrderCreatedEvent orderCreatedEvent) {
         Order order = orderCreatedEvent.getOrder();
         return PaymentRequestAvroModel.newBuilder()
-                .setId(UUID.randomUUID().toString())
-                .setSagaId("")
-                .setCustomerId(order.getCustomerId().toString())
-                .setOrderId(order.getId().getValue().toString())
+                .setId(UUID.randomUUID())
+                .setSagaId(UUID.fromString("68f173a1-a28d-42ca-b720-72497bbea664"))
+                .setCustomerId(order.getCustomerId().getValue())
+                .setOrderId(order.getId().getValue())
                 .setPrice(order.getPrice().getAmount())
                 .setCreatedAt(orderCreatedEvent.getCreatedAt().toInstant())
                 .setPaymentOrderStatus(PaymentOrderStatus.PENDING)
@@ -31,42 +31,42 @@ public class OrderMessagingDataMapper {
 
     public PaymentRequestAvroModel orderCancelledEventToPaymentRequestAvroModel(OrderCancelledEvent orderCancelledEvent) {
         Order order = orderCancelledEvent.getOrder();
-        return new PaymentRequestAvroModel(
-                UUID.randomUUID().toString(),
-                "",
-                order.getCustomerId().getValue().toString(),
-                order.getId().getValue().toString(),
-                order.getPrice().getAmount(),
-                orderCancelledEvent.getCreatedAt().toInstant(),
-                PaymentOrderStatus.CANCELLED
-        );
+
+        return PaymentRequestAvroModel.newBuilder()
+                .setId(UUID.randomUUID())
+                .setSagaId(UUID.fromString(""))
+                .setCustomerId(order.getCustomerId().getValue())
+                .setOrderId(order.getId().getValue())
+                .setPrice(order.getPrice().getAmount())
+                .setCreatedAt(orderCancelledEvent.getCreatedAt().toInstant())
+                .setPaymentOrderStatus(PaymentOrderStatus.CANCELLED)
+                .build();
     }
 
     public RestaurantApprovalRequestAvroModel orderPaidEventToRestaurantApprovalRequestAvroModel(OrderPaidEvent orderPaidEvent) {
         Order order = orderPaidEvent.getOrder();
-        return new RestaurantApprovalRequestAvroModel(
-                UUID.randomUUID().toString(),
-                "",
-                order.getRestaurantId().getValue().toString(),
-                order.getId().getValue().toString(),
-                RestaurantOrderStatus.PAID,
-                order.getItems().stream().map(
-                        orderItem -> new Product(
-                                orderItem.getId().getValue().toString(),
-                                orderItem.getQuantity())
-                ).collect(Collectors.toList()),
-                order.getPrice().getAmount(),
-                orderPaidEvent.getCreatedAt().toInstant()
-        );
+        return RestaurantApprovalRequestAvroModel.newBuilder()
+                .setId(UUID.randomUUID())
+                .setSagaId(UUID.fromString("68f173a1-a28d-42ca-b720-72497bbea664"))
+                .setOrderId(order.getId().getValue())
+                .setRestaurantId(order.getRestaurantId().getId())
+                .setRestaurantOrderStatus(RestaurantOrderStatus.valueOf(order.getOrderStatus().name()))
+                .setProducts(order.getItems().stream().map(orderItem ->
+                        new Product(orderItem.getProduct().getId().getValue().toString(), orderItem.getQuantity()))
+                        .toList())
+                .setPrice(order.getPrice().getAmount())
+                .setCreatedAt(orderPaidEvent.getCreatedAt().toInstant())
+                .setRestaurantOrderStatus(RestaurantOrderStatus.PAID)
+                .build();
     }
 
     public PaymentResponse paymentResponseAvroModelToPaymentResponse(PaymentResponseAvroModel paymentResponseAvroModel) {
         return new PaymentResponse(
-                paymentResponseAvroModel.getId(),
-                paymentResponseAvroModel.getSagaId(),
-                paymentResponseAvroModel.getOrderId(),
-                paymentResponseAvroModel.getPaymentId(),
-                paymentResponseAvroModel.getCustomerId(),
+                paymentResponseAvroModel.getId().toString(),
+                paymentResponseAvroModel.getSagaId().toString(),
+                paymentResponseAvroModel.getOrderId().toString(),
+                paymentResponseAvroModel.getPaymentId().toString(),
+                paymentResponseAvroModel.getCustomerId().toString(),
                 paymentResponseAvroModel.getPrice(),
                 paymentResponseAvroModel.getCreatedAt(),
                 PaymentStatus.valueOf(paymentResponseAvroModel.getPaymentStatus().name()),
@@ -76,10 +76,10 @@ public class OrderMessagingDataMapper {
 
     public RestaurantApprovalResponse approvalResponseAvroModelToApprovalResponse(RestaurantApprovalResponseAvroModel model) {
         return new RestaurantApprovalResponse(
-                model.getId(),
-                model.getSagaId(),
-                model.getOrderId(),
-                model.getRestaurantId(),
+                model.getId().toString(),
+                model.getSagaId().toString(),
+                model.getOrderId().toString(),
+                model.getRestaurantId().toString(),
                 model.getCreatedAt(),
                 OrderApprovalStatus.valueOf(model.getOrderApprovalStatus().name()),
                 model.getFailureMessages()
